refactoring screens/steps classes decoupling methods